Fix RS-34928. Fix bug of displaying table constraints. Now each constraint is displayed in a single instance with a list of affected columns.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -845,7 +845,7 @@ ColumnConstraintTableModel.Name=Name
 ColumnConstraintTableModel.ReferenceColumn=Reference Column
 ColumnConstraintTableModel.ReferenceSchema=Reference Schema
 ColumnConstraintTableModel.ReferenceTable=Reference Table
-ColumnConstraintTableModel.TableColumn=Table Column
+ColumnConstraintTableModel.TableColumn=Table Columns
 ColumnConstraintTableModel.Type=Type
 ColumnConstraintTableModel.UpdateRule=Update Rule
 ColumnIndexTableModel.IndexName=Index Name
