--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -845,7 +845,7 @@ ColumnConstraintTableModel.Name=Название
 ColumnConstraintTableModel.ReferenceColumn=Связанный столбец
 ColumnConstraintTableModel.ReferenceSchema=Связанная схема
 ColumnConstraintTableModel.ReferenceTable=Связанная таблица
-ColumnConstraintTableModel.TableColumn=Название столбца таблицы
+ColumnConstraintTableModel.TableColumn=Названия столбцов таблицы
 ColumnConstraintTableModel.Type=Тип ключа
 ColumnConstraintTableModel.UpdateRule=Правило обновления
 ColumnIndexTableModel.IndexName=Имя индекса
