--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -842,7 +842,7 @@ ClearRecentFilesCommand.message=An IO error occurred clearing the recent open fi
 ColumnConstraintTableModel.Check=Check
 ColumnConstraintTableModel.DeleteRule=Delete Rule
 ColumnConstraintTableModel.Name=Name
-ColumnConstraintTableModel.ReferenceColumn=Reference Column
+ColumnConstraintTableModel.ReferenceColumn=Reference Columns
 ColumnConstraintTableModel.ReferenceSchema=Reference Schema
 ColumnConstraintTableModel.ReferenceTable=Reference Table
 ColumnConstraintTableModel.TableColumn=Table Columns
