See RS-87664 Add "recompile All" menu to the object tree context menu

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -775,6 +775,7 @@ BrowserTreePopupMenu.inactive=Disable
 BrowserTreePopupMenu.insertStatement=INSERT statement
 BrowserTreePopupMenu.moveToFolder=Move to folder...
 BrowserTreePopupMenu.properties=Connection Properties
+BrowserTreePopupMenu.recompileAll=Recompile all {0}
 BrowserTreePopupMenu.recycle=Recycle this Connection
 BrowserTreePopupMenu.reload=Reload {0}
 BrowserTreePopupMenu.selectAll=Select all {0}
