--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -775,6 +775,7 @@ BrowserTreePopupMenu.inactive=Выключить
 BrowserTreePopupMenu.insertStatement=INSERT запрос
 BrowserTreePopupMenu.moveToFolder=Переместить в папку...
 BrowserTreePopupMenu.properties=Свойства подключения
+BrowserTreePopupMenu.recompileAll=Перекомпилировать все {0}
 BrowserTreePopupMenu.recycle=Переподключиться
 BrowserTreePopupMenu.reload=Перезагрузить {0}
 BrowserTreePopupMenu.selectAll=Выбрать все {0}
