Fix RS-68636. Added "Switch table autoresize mode" RolloverButton for table data display panel with shortcut on (ALT + NUM_ADD).

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1611,6 +1611,7 @@ TableDataTab.DeleteRecord=Delete record
 TableDataTab.FetchAll=Fetch all
 TableDataTab.InsertRecord=Insert record
 TableDataTab.ReloadData=Reload data
+TableDataTab.SwitchTableAutoresizeMode=Switch Data Display
 TableDataTab.Rollback=Rollback
 TableDataTab.labelExecuting=Executing query for data...
 TableDefinitionPanel.Autoincrement=Autoincrement
