--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1611,6 +1611,7 @@ TableDataTab.DeleteRecord=Удалить запись
 TableDataTab.FetchAll=Загрузить все
 TableDataTab.InsertRecord=Вставить запись
 TableDataTab.ReloadData=Обновить данные
+TableDataTab.SwitchTableAutoresizeMode=Переключить отображение данных
 TableDataTab.Rollback=Откатить
 TableDataTab.labelExecuting=Выполнение запроса загрузки данных...
 TableDefinitionPanel.Autoincrement=Автоинкремент
