See RS-88046 export to excel 2007 and add a message about exceeding the allowed number of lines

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1518,6 +1518,7 @@ QueryEditorResultsExporter.TableName=Table name:
 QueryEditorResultsExporter.UseDoubleQuotesForChar/varchar/longvarcharColumns=Use double quotes for char/varchar/longvarchar columns
 QueryEditorResultsExporter.YouMustEnterACustomDelimiter=You must enter a custom delimeter
 QueryEditorResultsExporter.YouMustSpecifyAFileToExportTo=You must specify a file to export to.
+QueryEditorResultsExporter.maxRowMessage=The maximum number of rows that can be exported is {0}
 QueryEditorResultsPanel.title=Output
 QueryEditorToolBar.change-split-orientation-command=Change Split Orientation
 QueryEditorToolBar.clear-editor-output-command=Clear the editor's output log panel
