Working at RS-20258. Added localization and warning messages.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -815,6 +815,30 @@ ColumnIndexTableModel.IndexName=Index Name
 ColumnIndexTableModel.IndexedColumn=Indexed Column
 ColumnIndexTableModel.Non-Unique=Non-Unique
 ComparerDBPanel.ComparerDB=Comparer DB
+ComparerDBPanel.WelcomeText=Master database will be modified.\nCompare database is an example.
+ComparerDBPanel.CompareButton=Compare
+ComparerDBPanel.SaveScriptButton=Save Script
+ComparerDBPanel.ExecuteScriptButton=Execute Script
+ComparerDBPanel.SelectAllButton=Select All
+ComparerDBPanel.CheckCreate=Check for CREATE
+ComparerDBPanel.CheckAlter=Check for ALTER
+ComparerDBPanel.CheckDrop=Check for DROP
+ComparerDBPanel.SafeTypeConversion=Safe Type Conversion
+ComparerDBPanel.IgnoreTablesConstraints=Ignore Tables Constraints
+ComparerDBPanel.ConnectionsLabel=Connections
+ComparerDBPanel.MasterDatabaseLabel=Master database:
+ComparerDBPanel.CompareDatabaseLabel=Compare database:
+ComparerDBPanel.AttributesLabel=Attributes
+ComparerDBPanel.PropertiesLabel=Properties
+ComparerDBPanel.OutputLabel=Output
+ComparerDBPanel.RDBVersionBelow4=\nAt least one of the connection use RDB version below 4.0.\nTablespace will not be included in the comparison.
+ComparerDBPanel.ScriptSaved=Script was saved successfully.
+ComparerDBPanel.SavedTo=Saved to: 
+ComparerDBPanel.UnableCompareSampleConnections=Unable to compare.\nThe same connections selected.
+ComparerDBPanel.UnableCompareNoAttributes=Unable to compare.\nNo attributes for comparing selected.
+ComparerDBPanel.UnableCompareNoProperties=Unable to compare.\nNo properties for comparing selected.
+ComparerDBPanel.NothingToSave=Nothing to save\nScript is empty.
+ComparerDBPanel.NothingToExecute=Nothing to execute\nScript is empty.
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
 ConnectionPanel.Basic=Basic
