--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -815,6 +815,30 @@ ColumnIndexTableModel.IndexName=Имя индекса
 ColumnIndexTableModel.IndexedColumn=Индексируемый столбец
 ColumnIndexTableModel.Non-Unique=Неуникальность
 ComparerDBPanel.ComparerDB=Сравнение баз данных
+ComparerDBPanel.WelcomeText=Мастер-база будет изменена.\nБаза сравнения - образец.
+ComparerDBPanel.CompareButton=Сравнить
+ComparerDBPanel.SaveScriptButton=Сохранить Скрипт
+ComparerDBPanel.ExecuteScriptButton=Выполнить Скрипт
+ComparerDBPanel.SelectAllButton=Выбрать Все
+ComparerDBPanel.CheckCreate=Поиск CREATE элементов
+ComparerDBPanel.CheckAlter=Поиск ALTER элементов
+ComparerDBPanel.CheckDrop=Поиск DROP элементов
+ComparerDBPanel.SafeTypeConversion=Безопасное преобразование типов
+ComparerDBPanel.IgnoreTablesConstraints=Игнорировать ограничения таблиц
+ComparerDBPanel.ConnectionsLabel=Соединения
+ComparerDBPanel.MasterDatabaseLabel=Мастер-база:
+ComparerDBPanel.CompareDatabaseLabel=База сравнения:
+ComparerDBPanel.AttributesLabel=Аттрибуты
+ComparerDBPanel.PropertiesLabel=Параметры
+ComparerDBPanel.OutputLabel=Вывод
+ComparerDBPanel.RDBVersionBelow4=\nКак минимум одно из соединений использует версию РедБазыДанных ниже 4.0.\nТабличные пространства не будут включены в процесс сравнения.
+ComparerDBPanel.ScriptSaved=Скрипт сохранен успешно.
+ComparerDBPanel.SavedTo=Путь к сохраненному файлу: 
+ComparerDBPanel.UnableCompareSampleConnections=Невозможно начать процесс сравнения.\nВыбраны эквивалентные соединения.
+ComparerDBPanel.UnableCompareNoAttributes=Невозможно начать процесс сравнения.\nНе выбраны аттрибуты для сравнения.
+ComparerDBPanel.UnableCompareNoProperties=Невозможно начать процесс сравнения.\nНе выбраны параметры для сравнения.
+ComparerDBPanel.NothingToSave=Невозможно сохранить скрипт\nПоле скрипта пустое.
+ComparerDBPanel.NothingToExecute=Невозможно выполнить скрипт\nПоле скрипта пустое.
 ConnectionPanel.Advanced=Расширенные
 ConnectionPanel.Authentication=Аутентификация:
 ConnectionPanel.Basic=Базовые
