add support for external triggers

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -537,6 +537,9 @@ AbstractCreateObjectPanel.description=Description
 AbstractCreateObjectPanel.table=Table
 AbstractCreateObjectPanel.text=Text
 AbstractCreateObjectPanel.type=Type
+AbstractCreateObjectPanel.Engine=Engine
+AbstractCreateObjectPanel.EntryPoint=Entry Point
+AbstractCreateObjectPanel.useExternal=Use external module
 AbstractDriverPanel.addFindButton=Find
 AbstractDriverPanel.addLibraryButton=Add Library
 AbstractDriverPanel.addRemoveButton=Remove
@@ -593,6 +596,7 @@ AddQueryBookmarkPanel.validation.uniqueName=The name for this bookmark already e
 AddToUserDefinedKeywordsCommand.log.addKeyword1=Keyword [ 
 AddToUserDefinedKeywordsCommand.log.addKeyword2=\ ] added to user defined keyword list.
 AddToUserDefinedKeywordsCommand.log.errorAddKeyword=Keyword already exists as a part of the defined keyword list.
+AnaliseRecompileDialog.generateScript=generated script for {0}
 ApplicationLauncher.console-JavaVersion=Java version
 ApplicationLauncher.console-OSVersion=Operating System
 ApplicationLauncher.console-RedExpertVersion=Red Expert version
@@ -603,7 +607,7 @@ ApplicationLogsCommand.dataImportLog=data import log?
 ApplicationLogsCommand.messageReset=Are you sure you want to reset the 
 ApplicationLogsCommand.messageResetAll=Are you sure you want to reset ALL system logs?
 ApplicationLogsCommand.systemActivityLog=system activity log?
-AsbtractImportExportWorker.cancelProcessConfirm=This will cancel the current process.\nDo you wish to proceed?
+AbstractImportExportWorker.cancelProcessConfirm=This will cancel the current process.\nDo you wish to proceed?
 AutoIncrementPanel.CreateProcedure=Create Procedure
 AutoIncrementPanel.CreateSequence=Create Sequence
 AutoIncrementPanel.CreateTrigger=Create Trigger
@@ -979,14 +983,11 @@ CreateProcedureFunctionPanel.Cursors=Cursors
 CreateProcedureFunctionPanel.DDL=DDL
 CreateProcedureFunctionPanel.Description=Description
 CreateProcedureFunctionPanel.Edit=Edit
-CreateProcedureFunctionPanel.Engine=Engine
-CreateProcedureFunctionPanel.EntryPoint=Entry Point
 CreateProcedureFunctionPanel.FUNCTION=Function
 CreateProcedureFunctionPanel.InputParameters=Input Parameters
 CreateProcedureFunctionPanel.OutputParameters=Output Parameters
 CreateProcedureFunctionPanel.PROCEDURE=Procedure
 CreateProcedureFunctionPanel.Variables=Variables
-CreateProcedureFunctionPanel.useExternal=Use external module
 CreateTableFunctionPanel.BrowseButtonText=Browse
 CreateTableFunctionPanel.Columns=Columns
 CreateTableFunctionPanel.Connection=Connection:
