refine the recompilation of objects

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -530,6 +530,8 @@ AboutPanel.System=System
 AboutPanel.Title=About
 AboutPanel.Version=Version
 AboutPanel.ViewLicense=View License
+AbstractCreateObjectPanel.Engine=Engine
+AbstractCreateObjectPanel.EntryPoint=Entry Point
 AbstractCreateObjectPanel.SQL=SQL
 AbstractCreateObjectPanel.active=Active
 AbstractCreateObjectPanel.check=Check
@@ -540,8 +542,6 @@ AbstractCreateObjectPanel.description=Description
 AbstractCreateObjectPanel.table=Table
 AbstractCreateObjectPanel.text=Text
 AbstractCreateObjectPanel.type=Type
-AbstractCreateObjectPanel.Engine=Engine
-AbstractCreateObjectPanel.EntryPoint=Entry Point
 AbstractCreateObjectPanel.useExternal=Use external module
 AbstractDriverPanel.addFindButton=Find
 AbstractDriverPanel.addLibraryButton=Add Library
@@ -568,6 +568,7 @@ AbstractDriverPanel.selectJdbcDriverNoSelection=You must select a driver from th
 AbstractDriverPanel.selectJdbcDrivers=Select JDBC Drivers...
 AbstractDriverPanel.selectWithDots=Select...
 AbstractDriverPanel.zipArchiveFiles=ZIP Archive files
+AbstractImportExportWorker.cancelProcessConfirm=This will cancel the current process.\nDo you wish to proceed?
 AbstractImportExportWorker.dateConversionError=Error converting date/time value - invalid SQL date/time escape format.
 AbstractImportExportWorker.dateFormatDialog=At least one column in the current table is a Date/Time SQL datatype.\nPlease enter the date format for this column as displayed in the import file in the field below.\n 
 AbstractImportExportWorker.dateFormatDialogTitle=Date Field
@@ -610,7 +611,6 @@ ApplicationLogsCommand.dataImportLog=data import log?
 ApplicationLogsCommand.messageReset=Are you sure you want to reset the 
 ApplicationLogsCommand.messageResetAll=Are you sure you want to reset ALL system logs?
 ApplicationLogsCommand.systemActivityLog=system activity log?
-AbstractImportExportWorker.cancelProcessConfirm=This will cancel the current process.\nDo you wish to proceed?
 AutoIncrementPanel.CreateProcedure=Create Procedure
 AutoIncrementPanel.CreateSequence=Create Sequence
 AutoIncrementPanel.CreateTrigger=Create Trigger
@@ -790,15 +790,18 @@ BrowserTreePopupMenu.selectStatement=SELECT statement
 BrowserTreePopupMenu.switch=Active
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Show only default Catalog or Schema
 BrowserTreePopupMenu.updateStatement=UPDATE statement
+BrowserTreePopupMenuActionListener.Analise=Analise
 BrowserTreePopupMenuActionListener.ConfirmCancelDialog=The selected file exists.\nOverwrite existing file?
 BrowserTreePopupMenuActionListener.ErrorMessage=Error writing output pane contents to file.\n
 BrowserTreePopupMenuActionListener.ExportData=Export Data
 BrowserTreePopupMenuActionListener.ImportData=Import Data
+BrowserTreePopupMenuActionListener.Recompile=Recompile
 BrowserTreePopupMenuActionListener.exportDbunit=Export DBUnit
 BrowserTreePopupMenuActionListener.exportExcel=Export Excel Spreadsheet
 BrowserTreePopupMenuActionListener.exportXml=Export XML
 BrowserTreePopupMenuActionListener.importXml=Import XML
 BrowserTreePopupMenuActionListener.messageInUse=Object <{0}> is in use and cannot be deleted until it is closed.
+BrowserTreePopupMenuActionListener.recompile-message=All {0} will be recompiled. Continue?
 BrowserTreePopupMenuActionListener.save-as.command=Select Output File Path
 BrowserTreePopupMenuActionListener.temporaryInconvenience=This section is under construction. Sorry for the temporary inconvenience
 BrowserTreeRootPopupMenu.ConnectAll=Connect All
@@ -1100,6 +1103,8 @@ ExecuteProcedurePanel.ObjectName=Object Name:
 ExecuteProcedurePanel.ObjectType.tool-tip=Select the database object type
 ExecuteProcedurePanel.ObjectType=Object Type:
 ExecuteProcedurePanel.Parameter=Parameter
+ExecuteQueryDialog.FullLog=Full Log
+ExecuteQueryDialog.Single=Single SQL Result
 ExecuteQueryDialog.commit=Commit
 ExecuteQueryDialog.copyError=Copy SQL Return
 ExecuteQueryDialog.copyQuery=Copy Statement
@@ -1616,8 +1621,8 @@ TableDataTab.DeleteRecord=Delete record
 TableDataTab.FetchAll=Fetch all
 TableDataTab.InsertRecord=Insert record
 TableDataTab.ReloadData=Reload data
-TableDataTab.SwitchTableAutoresizeMode=Switch Data Display
 TableDataTab.Rollback=Rollback
+TableDataTab.SwitchTableAutoresizeMode=Switch Data Display
 TableDataTab.labelExecuting=Executing query for data...
 TableDefinitionPanel.Autoincrement=Autoincrement
 TableDefinitionPanel.ByDescriptor=By Descriptor
