--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -530,6 +530,8 @@ AboutPanel.System=Система
 AboutPanel.Title=О программе
 AboutPanel.Version=Версия
 AboutPanel.ViewLicense=Просмотреть Лицензию
+AbstractCreateObjectPanel.Engine=Имя движка
+AbstractCreateObjectPanel.EntryPoint=Внешний модуль
 AbstractCreateObjectPanel.SQL=SQL
 AbstractCreateObjectPanel.active=Активный
 AbstractCreateObjectPanel.check=Проверка
@@ -541,8 +543,6 @@ AbstractCreateObjectPanel.table=Таблица
 AbstractCreateObjectPanel.text=Текст
 AbstractCreateObjectPanel.type=Тип
 AbstractCreateObjectPanel.useExternal=Использовать внешний модуль
-AbstractCreateObjectPanel.Engine=Имя движка
-AbstractCreateObjectPanel.EntryPoint=Внешний модуль
 AbstractDriverPanel.addFindButton=Найти
 AbstractDriverPanel.addLibraryButton=Добавить библиотеку
 AbstractDriverPanel.addRemoveButton=Удалить
@@ -568,6 +568,7 @@ AbstractDriverPanel.selectJdbcDriverNoSelection=Вы должны выбрать
 AbstractDriverPanel.selectJdbcDrivers=Выбор JDBC  драйверов...
 AbstractDriverPanel.selectWithDots=Выбор...
 AbstractDriverPanel.zipArchiveFiles=Архивный файл ZIP
+AbstractImportExportWorker.cancelProcessConfirm=Это отменит текущий процесс. \nВы хотите продолжить?
 AbstractImportExportWorker.dateConversionError=Ошибка преобразования даты / времени - недопустимый формат вывода даты / времени SQL.
 AbstractImportExportWorker.dateFormatDialog=По меньшей мере один столбец в текущей таблице является типом данных даты / времени SQL. \nПожалуйста, введите формат даты для этого столбца, как показано в файле импорта в поле ниже. \n
 AbstractImportExportWorker.dateFormatDialogTitle=Поле ввода даты
@@ -610,7 +611,6 @@ ApplicationLogsCommand.dataImportLog=журнал импорта данных?
 ApplicationLogsCommand.messageReset=Вы уверены, что хотите очистить 
 ApplicationLogsCommand.messageResetAll=Вы уверены, что хотите очистить все системные журналы?
 ApplicationLogsCommand.systemActivityLog=журнал активности системы?
-AbstractImportExportWorker.cancelProcessConfirm=Это отменит текущий процесс. \nВы хотите продолжить?
 AutoIncrementPanel.CreateProcedure=Создать процедуру
 AutoIncrementPanel.CreateSequence=Создать генератор
 AutoIncrementPanel.CreateTrigger=Создать триггер
@@ -790,15 +790,18 @@ BrowserTreePopupMenu.selectStatement=SELECT запрос
 BrowserTreePopupMenu.switch=Активность
 BrowserTreePopupMenu.switchDefaultCatalogAndSchemaDisplay=Показывать только стандартные каталог или схему
 BrowserTreePopupMenu.updateStatement=UPDATE запрос
+BrowserTreePopupMenuActionListener.Analise=Анализ
 BrowserTreePopupMenuActionListener.ConfirmCancelDialog=Выбранный файл существует. \nПерезаписать существующий файл?
 BrowserTreePopupMenuActionListener.ErrorMessage=Ошибка записи выходных данных в файл.\n
 BrowserTreePopupMenuActionListener.ExportData=Экспорт данных
 BrowserTreePopupMenuActionListener.ImportData=Импорт данных
+BrowserTreePopupMenuActionListener.Recompile=Перекомпиляция
 BrowserTreePopupMenuActionListener.exportDbunit=Экспорт в DBUnit файл
 BrowserTreePopupMenuActionListener.exportExcel=Экспорт в таблицу Excel
 BrowserTreePopupMenuActionListener.exportXml=Экспорт в XML файл
 BrowserTreePopupMenuActionListener.importXml=Импорт из XML
 BrowserTreePopupMenuActionListener.messageInUse=Объект <{0}> открыт в браузере и не может быть удален. Для продолжения закройте вкладку с объектом.
+BrowserTreePopupMenuActionListener.recompile-message=Все {0} будут перекомпилированы. Продолжить?
 BrowserTreePopupMenuActionListener.save-as.command=Сохранить файл как
 BrowserTreePopupMenuActionListener.temporaryInconvenience=Данный раздел находится в разработке. Извините за временные неудобства
 BrowserTreeRootPopupMenu.ConnectAll=Подключить все
@@ -1100,6 +1103,8 @@ ExecuteProcedurePanel.ObjectName=Имя объекта:
 ExecuteProcedurePanel.ObjectType.tool-tip=Выбрать тип объекта базы данных
 ExecuteProcedurePanel.ObjectType=Тип объекта:
 ExecuteProcedurePanel.Parameter=Параметр
+ExecuteQueryDialog.FullLog=Полный лог
+ExecuteQueryDialog.Single=Одиночный SQL ответ
 ExecuteQueryDialog.commit=Подтвердить
 ExecuteQueryDialog.copyError=Копировать SQL ответ
 ExecuteQueryDialog.copyQuery=Копировать выражение
@@ -1522,8 +1527,8 @@ QueryEditorResultsExporter.TableName=Имя таблицы:
 QueryEditorResultsExporter.UseDoubleQuotesForChar/varchar/longvarcharColumns=Используйте двойные кавычки для столбцов char/varchar/longvarchar
 QueryEditorResultsExporter.YouMustEnterACustomDelimiter=Вы должны ввести пользовательский разделитель
 QueryEditorResultsExporter.YouMustSpecifyAFileToExportTo=Вы должны указать файл для экспорта.
-QueryEditorResultsPanel.title=Вывод
 QueryEditorResultsExporter.maxRowMessage=Превышено максимальное количество строк экспорта. Будет экспортировано {0} строк
+QueryEditorResultsPanel.title=Вывод
 QueryEditorToolBar.change-split-orientation-command=Изменить ориентацию разделителя
 QueryEditorToolBar.clear-editor-output-command=Очистить панель вывода
 QueryEditorToolBar.comment-lines-command=Закомментировать/Раскомментировать
@@ -1616,8 +1621,8 @@ TableDataTab.DeleteRecord=Удалить запись
 TableDataTab.FetchAll=Загрузить все
 TableDataTab.InsertRecord=Вставить запись
 TableDataTab.ReloadData=Обновить данные
-TableDataTab.SwitchTableAutoresizeMode=Переключить отображение данных
 TableDataTab.Rollback=Откатить
+TableDataTab.SwitchTableAutoresizeMode=Переключить отображение данных
 TableDataTab.labelExecuting=Выполнение запроса загрузки данных...
 TableDefinitionPanel.Autoincrement=Автоинкремент
 TableDefinitionPanel.ByDescriptor=Через дескриптор
