Working at RS-20258. Added progressDialog on executing process

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -887,6 +887,7 @@ ComparerDBPanel.UnableCompareNoAttributes=Невозможно начать пр
 ComparerDBPanel.UnableCompareNoProperties=Невозможно начать процесс сравнения.\nНе выбраны параметры для сравнения.
 ComparerDBPanel.NothingToSave=Невозможно сохранить скрипт\nПоле скрипта пустое.
 ComparerDBPanel.NothingToExecute=Невозможно выполнить скрипт\nПоле скрипта пустое.
+ComparerDBPanel.Executing=Идет сравнение, пожалуйста подождите
 ConnectionImporter.ImportingConnection=Импортирование соединения [ {0} ]
 ConnectionPanel.Advanced=Расширенные
 ConnectionPanel.Authentication=Аутентификация:
