--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -887,6 +887,7 @@ ComparerDBPanel.UnableCompareNoAttributes=Unable to compare.\nNo attributes for 
 ComparerDBPanel.UnableCompareNoProperties=Unable to compare.\nNo properties for comparing selected.
 ComparerDBPanel.NothingToSave=Nothing to save\nScript is empty.
 ComparerDBPanel.NothingToExecute=Nothing to execute\nScript is empty.
+ComparerDBPanel.Executing=Comparing, please wait
 ConnectionImporter.ImportingConnection=Importing connection [ {0} ]
 ConnectionPanel.Advanced=Advanced
 ConnectionPanel.Authentication=Authentication:
