Working at RS-20258. Added "Ignore Comments" checkBox. Also renamed abstract method getAlterSQL in accordance with its purpose.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -873,6 +873,7 @@ ComparerDBPanel.CheckAlter=Check for ALTER
 ComparerDBPanel.CheckDrop=Check for DROP
 ComparerDBPanel.SafeTypeConversion=Safe Type Conversion
 ComparerDBPanel.IgnoreTablesConstraints=Ignore Tables Constraints
+ComparerDBPanel.IgnoreComments=Ignore Comments
 ComparerDBPanel.ConnectionsLabel=Connections
 ComparerDBPanel.MasterDatabaseLabel=Master database:
 ComparerDBPanel.CompareDatabaseLabel=Compare database:
