--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -873,6 +873,7 @@ ComparerDBPanel.CheckAlter=Поиск ALTER элементов
 ComparerDBPanel.CheckDrop=Поиск DROP элементов
 ComparerDBPanel.SafeTypeConversion=Безопасное преобразование типов
 ComparerDBPanel.IgnoreTablesConstraints=Игнорировать ограничения таблиц
+ComparerDBPanel.IgnoreComments=Игнорировать комментарии
 ComparerDBPanel.ConnectionsLabel=Соединения
 ComparerDBPanel.MasterDatabaseLabel=Мастер-база:
 ComparerDBPanel.CompareDatabaseLabel=База сравнения:
