Working at RS-20258. Sorted the order of generating constraints defining scripts. Added checkBoxes for ignoring each type of constraints (PK, FK, UK, CK) while DBs comparing.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -872,7 +872,10 @@ ComparerDBPanel.CheckCreate=Check for CREATE
 ComparerDBPanel.CheckAlter=Check for ALTER
 ComparerDBPanel.CheckDrop=Check for DROP
 ComparerDBPanel.SafeTypeConversion=Safe Type Conversion
-ComparerDBPanel.IgnoreTablesConstraints=Ignore Tables Constraints
+ComparerDBPanel.IgnorePK=Ignore PK
+ComparerDBPanel.IgnoreFK=Ignore FK
+ComparerDBPanel.IgnoreUK=Ignore UK
+ComparerDBPanel.IgnoreCK=Ignore CK
 ComparerDBPanel.IgnoreComments=Ignore Comments
 ComparerDBPanel.ConnectionsLabel=Connections
 ComparerDBPanel.MasterDatabaseLabel=Master database:
