--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -872,7 +872,10 @@ ComparerDBPanel.CheckCreate=Поиск CREATE элементов
 ComparerDBPanel.CheckAlter=Поиск ALTER элементов
 ComparerDBPanel.CheckDrop=Поиск DROP элементов
 ComparerDBPanel.SafeTypeConversion=Безопасное преобразование типов
-ComparerDBPanel.IgnoreTablesConstraints=Игнорировать ограничения таблиц
+ComparerDBPanel.IgnorePK=Игнорировать PK
+ComparerDBPanel.IgnoreFK=Игнорировать FK
+ComparerDBPanel.IgnoreUK=Игнорировать UK
+ComparerDBPanel.IgnoreCK=Игнорировать CK
 ComparerDBPanel.IgnoreComments=Игнорировать комментарии
 ComparerDBPanel.ConnectionsLabel=Соединения
 ComparerDBPanel.MasterDatabaseLabel=Мастер-база:
