Working at RS-90520. Added "ignore computed fields" checkBox. Computed fields SQL-script generation separated from CREATE TABLE SQL-script generation in its own block.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -877,6 +877,7 @@ ComparerDBPanel.IgnoreFK=Ignore FK
 ComparerDBPanel.IgnoreUK=Ignore UK
 ComparerDBPanel.IgnoreCK=Ignore CK
 ComparerDBPanel.IgnoreComments=Ignore Comments
+ComparerDBPanel.IgnoreComputed=Ignore Computed Fields
 ComparerDBPanel.ConnectionsLabel=Connections
 ComparerDBPanel.MasterDatabaseLabel=Master database:
 ComparerDBPanel.CompareDatabaseLabel=Compare database:
