--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -877,6 +877,7 @@ ComparerDBPanel.IgnoreFK=Игнорировать FK
 ComparerDBPanel.IgnoreUK=Игнорировать UK
 ComparerDBPanel.IgnoreCK=Игнорировать CK
 ComparerDBPanel.IgnoreComments=Игнорировать комментарии
+ComparerDBPanel.IgnoreComputed=Игнорировать вычисляемые столбцы
 ComparerDBPanel.ConnectionsLabel=Соединения
 ComparerDBPanel.MasterDatabaseLabel=Мастер-база:
 ComparerDBPanel.CompareDatabaseLabel=База сравнения:
