Working at RS-20258. - Added check on RDB ver. below 3. - Changed objects SQL-script generation order for prevention dependency conflicts.

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -884,6 +884,7 @@ ComparerDBPanel.CompareDatabaseLabel=База сравнения:
 ComparerDBPanel.AttributesLabel=Аттрибуты
 ComparerDBPanel.PropertiesLabel=Параметры
 ComparerDBPanel.OutputLabel=Вывод
+ComparerDBPanel.RDBVersionBelow3=\nКак минимум одно из соединений использует версию РедБазыДанных ниже 3.0.\nПользователи, пакеты, функции и табличные пространства не будут включены в процесс сравнения.
 ComparerDBPanel.RDBVersionBelow4=\nКак минимум одно из соединений использует версию РедБазыДанных ниже 4.0.\nТабличные пространства не будут включены в процесс сравнения.
 ComparerDBPanel.ScriptSaved=Скрипт сохранен успешно.
 ComparerDBPanel.SavedTo=Путь к сохраненному файлу: 
