See RS-90404 add the ability to specify transaction parameters in the query editor

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1489,6 +1489,7 @@ QueryEditor.MaxRows.tool-tip=Enable/disable max records
 QueryEditor.MaxRows=Max Rows:
 QueryEditor.StopOnError.tool-tip=Enable/disable stopping when error in script
 QueryEditor.StopOnError=Stop on error
+QueryEditor.ShowTPP=Show transaction parameters
 QueryEditor.TransactionIsolationLevel=Transaction isolation level:
 QueryEditor.autocommit=Auto-commit={0}
 QueryEditor.script=script
@@ -1703,6 +1704,7 @@ TraceManagerPanel.Username=User name
 TraceManagerPanel.VisibleColumns=Visible Columns
 TraceManagerPanel.matchCase=Match case
 TraceManagerPanel.title=Trace Manager
+TransactionParametersPanel.lockTimeout=Lock timeout
 UserManagerPanel.Add=Add
 UserManagerPanel.AddRole=Add role
 UserManagerPanel.AddUser=Add user
