See RS-86268 add query execution in multiple connections

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -149,6 +149,7 @@ action.editor-stop-command=Cancel Executing Statement
 action.execute-as-block-command=Execute as Single Statement
 action.execute-at-cursor-command=Execute at Cursor
 action.execute-command=Execute
+action.execute-in-any-connections-command=Execute in any connections
 action.execute-object.description=View and execute stored procedures and functions
 action.execute-object=Execute Stored Objects
 action.execute-selection-command=Execute Selection
@@ -1545,6 +1546,7 @@ QueryEditorToolBar.editor-show-hide-rs-columns-command=Show/hide result set colu
 QueryEditorToolBar.editor-stop-command=Cancel Current Statement
 QueryEditorToolBar.execute-at-cursor-command=Execute query at cursor
 QueryEditorToolBar.execute-command=Execute the contents of the query editor
+QueryEditorToolBar.execute-in-any-connections-command=Execute query in any connections
 QueryEditorToolBar.execute-script-command=Execute SQL Script
 QueryEditorToolBar.execute-selection-command=Execute the current text selection
 QueryEditorToolBar.manage-shortcuts-command=SQL shortcuts
