--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -887,7 +887,7 @@ ComparerDBPanel.CompareDatabaseLabel=Compare database:
 ComparerDBPanel.AttributesLabel=Attributes
 ComparerDBPanel.PropertiesLabel=Properties
 ComparerDBPanel.OutputLabel=Output
-ComparerDBPanel.RDBVersionBelow3=\nAt least one of the connection use RDB version below 3.0.\nUser, Package, Function & Tablespace will not be included in the comparison.
+ComparerDBPanel.RDBVersionBelow3=\nAt least one of the connection use RDB version below 3.0.\nUser, Package, Function, Triggers for DDLs & Tablespace will not be included in the comparison.
 ComparerDBPanel.RDBVersionBelow4=\nAt least one of the connection use RDB version below 4.0.\nTablespace will not be included in the comparison.
 ComparerDBPanel.ScriptSaved=Script was saved successfully.
 ComparerDBPanel.SavedTo=Saved to: 
