add the ability to replace "\n" when exporting to a delimited file

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1520,6 +1520,7 @@ QueryEditorResultsExporter.Failed=failed
 QueryEditorResultsExporter.FileFormat=File Format:
 QueryEditorResultsExporter.FilePath=File Path:
 QueryEditorResultsExporter.IncludeColumnNamesAsFirstRow=Include column names as first row
+QueryEditorResultsExporter.ReplaceN=Replace '\\n'
 QueryEditorResultsExporter.ResultSetExportComplete=Result set export complete.
 QueryEditorResultsExporter.SQLExport=How save SQL query:
 QueryEditorResultsExporter.SQLInFile=Text file
