Fix RS-87217. Added confirmation dialog for closing the application.

--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -14,6 +14,7 @@ common.collate=Сортировка
 common.columns=Столбцы
 common.comment-field-label=Комментарий
 common.confirmation-request=Выйти без сохранения?
+common.exit-confirmation=Вы действительно хотите закрыть приложение?\nВсе несохраненные данные будут потеряны.
 common.confirmation=Подтверждение
 common.connect.button=Подключиться
 common.connecting=Подключаемся...
