--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -14,6 +14,7 @@ common.collate=Collation
 common.columns=Columns
 common.comment-field-label=Comment
 common.confirmation-request=Exit without saving changes?
+common.exit-confirmation=Сlose the application?\nAll unsaved data will be lost.
 common.confirmation=Confirmation
 common.connect.button=Connect
 common.connecting=Connecting...
