Fix RS-90549. Added the "COLLATE" field to the table creation dialog. Now, you can (not) specify COLLATE when adding columns to the table will be created.

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1637,6 +1637,7 @@ TableDefinitionPanel.Column=Column
 TableDefinitionPanel.ComputedBy=Computed by
 TableDefinitionPanel.Datatype=Datatype
 TableDefinitionPanel.DefaultValue=Default Value
+TableDefinitionPanel.Collate=Collate
 TableDefinitionPanel.Description=Description
 TableDefinitionPanel.Domain=Domain
 TableDefinitionPanel.Encoding=Encoding
