--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1639,6 +1639,7 @@ TableDefinitionPanel.Datatype=Тип данных
 TableDefinitionPanel.DefaultValue=Значение по умолчанию
 TableDefinitionPanel.Description=Описание
 TableDefinitionPanel.Domain=Домен
+TableDefinitionPanel.Collate=Порядок сортировки
 TableDefinitionPanel.Encoding=Кодировка
 TableDefinitionPanel.NULL=NULL
 TableDefinitionPanel.Name=Название
