fix recompile functions and packages

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -544,6 +544,7 @@ AbstractCreateObjectPanel.table=Table
 AbstractCreateObjectPanel.text=Text
 AbstractCreateObjectPanel.type=Type
 AbstractCreateObjectPanel.useExternal=Use external module
+AbstractCreateObjectPanel.deterministic=Deterministic
 AbstractDriverPanel.addFindButton=Find
 AbstractDriverPanel.addLibraryButton=Add Library
 AbstractDriverPanel.addRemoveButton=Remove
