--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -544,6 +544,7 @@ AbstractCreateObjectPanel.table=Таблица
 AbstractCreateObjectPanel.text=Текст
 AbstractCreateObjectPanel.type=Тип
 AbstractCreateObjectPanel.useExternal=Использовать внешний модуль
+AbstractCreateObjectPanel.deterministic=Детерминированность
 AbstractDriverPanel.addFindButton=Найти
 AbstractDriverPanel.addLibraryButton=Добавить библиотеку
 AbstractDriverPanel.addRemoveButton=Удалить
