add functions and packages to Grant Manager

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -1250,6 +1250,8 @@ GrantManagerPanel.Non-grantedOnly=Non-granted Only
 GrantManagerPanel.Object=Object
 GrantManagerPanel.PrivelegesFor=Privileges For
 GrantManagerPanel.Procedures=Procedures
+GrantManagerPanel.Functions=Functions
+GrantManagerPanel.Packages=Packages
 GrantManagerPanel.Refresh=Refresh
 GrantManagerPanel.Roles=Roles
 GrantManagerPanel.ShowSystemTables=Show System Tables
