--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -1250,6 +1250,8 @@ GrantManagerPanel.Non-grantedOnly=Только без прав
 GrantManagerPanel.Object=Объект
 GrantManagerPanel.PrivelegesFor=Получатели привилегий
 GrantManagerPanel.Procedures=Процедуры
+GrantManagerPanel.Functions=Функции
+GrantManagerPanel.Packages=Пакеты
 GrantManagerPanel.Refresh=Обновить
 GrantManagerPanel.Roles=Роли
 GrantManagerPanel.ShowSystemTables=Показывать системные таблицы
