add setting : autocomplete only with hotkeys

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -337,6 +337,7 @@ preferences.AlternatingRowBackground=Alternating row background
 preferences.Appearance=Appearance
 preferences.Auto-completeDatabaseObjectsOn=Auto-complete database objects on
 preferences.Auto-completeKeywordsOn=Auto-complete keywords on
+preferences.Auto-completeOnlyHotKey=Auto-complete only hotkey
 preferences.BinaryValueCellBackground=Binary value cell background
 preferences.BooleanValueCellBackground=Boolean value cell background
 preferences.Braces=Braces
