Fix RS-94995. - Fix package comments display - Add SimpleCommentPanel for editing package comments

--- a/src/org/executequery/localization/resources.properties
+++ b/src/org/executequery/localization/resources.properties
@@ -988,7 +988,7 @@ CreateIndexPanel.sorting=Sorting
 CreateIndexPanel.tablespace=Tablespace
 CreateIndexPanel.unique=Unique
 CreatePackagePanel.Body=Body
-CreatePackagePanel.Description=Description
+CreatePackagePanel.Description=Comment
 CreatePackagePanel.Header=Header
 CreateProcedureFunctionPanel.Body={0} body
 CreateProcedureFunctionPanel.Cursors=Cursors
