--- a/src/org/executequery/localization/resources_ru.properties
+++ b/src/org/executequery/localization/resources_ru.properties
@@ -988,7 +988,7 @@ CreateIndexPanel.sorting=Сортировка
 CreateIndexPanel.tablespace=Табличное пространство
 CreateIndexPanel.unique=Уникальный
 CreatePackagePanel.Body=Тело
-CreatePackagePanel.Description=Описание
+CreatePackagePanel.Description=Комментарий
 CreatePackagePanel.Header=Заголовок
 CreateProcedureFunctionPanel.Body=Тело {0}
 CreateProcedureFunctionPanel.Cursors=Курсоры
