Add index selectivity recalculation and object recompilation to guide

--- a/guide/RedExpert_Guide-ru.tex
+++ b/guide/RedExpert_Guide-ru.tex
@@ -1063,6 +1063,30 @@ SELECT * FROM employees WHERE (surname = ?)
 \anonsubsubsection{Удаление индексов}
 На боковой панели \textit{Подключения} щелкните правой кнопкой мыши по имени индекса и выберите пункт всплывающего меню \textit{Удалить <имя индекса>}. Откроется  диалоговое окно для подтверждения или отката операции удаления индекса (см. \hyperref[ris:01]{рис.~\ref{ris:01}}). Для подтверждения операции нажмите кнопку «Подтвердить».
 
+\anonsubsubsection{Пересчет селективности индексов}\label{sec:crind}
+
+Диалоговое окно \textit{Пересчет селективности} позволяет создавать новые индексы таблиц базы данных в выбранном соединении с базой данных.
+
+\begin{enumerate}[leftmargin=26pt]
+	\item В дереве объектов панели \textit{Подключения} нажмите правой кнопкой мыши по узлу \textit{ИНДЕКСЫ} и выберите пункт \textit{Пересчитать статистику всех индексов}. Откроется диалоговое окно.
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.75\linewidth]{img/selectivity.png}
+	\end{figure}	
+	\item Нажмите кнопку \textit{Да}. Появится новое диалоговое окно со списком SQL-запросов выполняющих пересчет статистики у всех индексов  
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.75\linewidth]{img/selectivity2.png}
+	\end{figure}	
+	\item Нажмите кнопку \textit{ОК}.
+\end{enumerate}
+
+\begin{figure}[H]
+	\caption{Диалоговое окно подтверждения или отката DDL операций}\label{ris:01}
+	\centering
+	\includegraphics[width = 0.48\linewidth]{img/create_index2.png}
+\end{figure}
+
 \anonsubsection{ПРОЦЕДУРЫ}
 
 \anonsubsubsection{Создание процедур}\label{sec:crproc}
@@ -1699,7 +1723,21 @@ SELECT * FROM employees WHERE (surname = ?)
 
 \anonsubsubsection{Удаление табличных пространств}
 На боковой панели \textit{Подключения} щелкните правой кнопкой мыши по имени табличного пространства и выберите пункт всплывающего меню \textit{Удалить <имя табличного пространства>}. Откроется  диалоговое окно для подтверждения или отката операции удаления пространства (см. \hyperref[ris:01]{рис.~\ref{ris:01}}). Для подтверждения операции нажмите кнопку «Подтвердить».
-
+\newpage
+\section{Перекомпиляция объектов}\label{sec:recompile_objects}
+\begin{enumerate}[leftmargin=20pt]
+	\item Перекомпиляция доступна для процедур, пакетов, функций и триггеров. Здесь показан пример с процедурами. Для остальных объектов алгоритм действий аналогичный
+	\item Нажмите правой кнопкой мыши на узел с процедурами(триггерами, функциями и пакетами) \begin{tikzpicture}
+		\pgftext{\includegraphics[width=100pt]{img/recompile.png}} at (0pt,0pt)
+	\end{tikzpicture} И выберите в контекстном меню пункт  \textit{Перекомпилировать все Процедуры}.
+	\item Подтвердите действие в открывшемся диалоговом окне и откроется диалоговое окно со списком sql запросов пересоздания каждой процедуры
+	\begin{figure}[H]
+		\centering
+		\includegraphics[width = 0.7\linewidth]{img/recompile2.png}
+	\end{figure}
+	\item Нажмите кнопку \textit{ОК}. 
+	
+\end{enumerate}
 \newpage
 \section{Выполнение хранимых объектов}\label{sec:execute_proc}
 
